Tooltip flicker alpha on redraw #56752

Closed
opened 2018-09-11 05:34:45 +02:00 by Campbell Barton · 7 comments

Using the toolbar, move your cursor over the buttons until tooltips show, as you move your cursor, notice the outline and shadow flickers.

As well as this the alpha of the tooltip changes.

In 58a8277098 this is also an issue with the redo panel.

I've looked into this bug and am quite sure its related to the way buttons draw with a batch cache, since replacing the draw calls using UI_draw_roundbox_4fv doesn't have the problem.

Using the toolbar, move your cursor over the buttons until tooltips show, as you move your cursor, notice the outline and shadow flickers. As well as this the alpha of the tooltip changes. In 58a8277098 this is also an issue with the redo panel. I've looked into this bug and am quite sure its related to the way buttons draw with a batch cache, since replacing the draw calls using `UI_draw_roundbox_4fv` doesn't have the problem.
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Clément Foucault was assigned by Campbell Barton 2018-09-11 05:35:02 +02:00

Added subscriber: @rboxman

Added subscriber: @rboxman

Here's a gif showing the flicker in case a repro is hard to see -- happens on my 2 Win10 machines, 1 with nVidia Quadro and 1 with AMD fire pro
flicker.gif

Here's a gif showing the flicker in case a repro is hard to see -- happens on my 2 Win10 machines, 1 with nVidia Quadro and 1 with AMD fire pro ![flicker.gif](https://archive.blender.org/developer/F4668013/flicker.gif)

@rboxman Thanks, I can repro now.

@rboxman Thanks, I can repro now.
Author
Owner

@fclem, note: checking over the code it seems the use-case for optimized button drawing is quite different to tooltip backdrop where it's not really such an advantage,
so I don't think it's so bad to avoid the problem and use UI_draw_roundbox_4fv for tooltips too.

It does mean we'd loose the outline and drop-shadow though (unless it's re-implemented).

@fclem, note: checking over the code it seems the use-case for optimized button drawing is quite different to tooltip backdrop where it's not really such an advantage, so I don't think it's so bad to avoid the problem and use `UI_draw_roundbox_4fv` for tooltips too. It does mean we'd loose the outline and drop-shadow though (unless it's re-implemented).

This issue was referenced by 8eedccb3f5

This issue was referenced by 8eedccb3f5d91bc60c4feb284cc2045badb45041

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56752
No description provided.