Workaround T56752: redo panel alpha flicker

The bug applies to tooltips, but isn't as noticeable.